// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game lost: last image stays on page, losing message is displayed, buttons are not visible 1`] = `
<div>
  <div
    class="Snowman"
  >
    <img
      alt="6"
    />
    <p>
      Number wrong: 
      6
    </p>
    <p
      class="Snowman-word"
    >
      _
      _
      _
      _
      _
    </p>
    <p
      class="letter"
      style="visibility: hidden;"
    >
      <button
        id="a"
        value="a"
      >
        a
      </button>
      <button
        disabled=""
        id="b"
        value="b"
      >
        b
      </button>
      <button
        id="c"
        value="c"
      >
        c
      </button>
      <button
        id="d"
        value="d"
      >
        d
      </button>
      <button
        id="e"
        value="e"
      >
        e
      </button>
      <button
        id="f"
        value="f"
      >
        f
      </button>
      <button
        id="g"
        value="g"
      >
        g
      </button>
      <button
        id="h"
        value="h"
      >
        h
      </button>
      <button
        id="i"
        value="i"
      >
        i
      </button>
      <button
        id="j"
        value="j"
      >
        j
      </button>
      <button
        id="k"
        value="k"
      >
        k
      </button>
      <button
        id="l"
        value="l"
      >
        l
      </button>
      <button
        id="m"
        value="m"
      >
        m
      </button>
      <button
        id="n"
        value="n"
      >
        n
      </button>
      <button
        id="o"
        value="o"
      >
        o
      </button>
      <button
        id="p"
        value="p"
      >
        p
      </button>
      <button
        disabled=""
        id="q"
        value="q"
      >
        q
      </button>
      <button
        disabled=""
        id="r"
        value="r"
      >
        r
      </button>
      <button
        id="s"
        value="s"
      >
        s
      </button>
      <button
        id="t"
        value="t"
      >
        t
      </button>
      <button
        id="u"
        value="u"
      >
        u
      </button>
      <button
        id="v"
        value="v"
      >
        v
      </button>
      <button
        id="w"
        value="w"
      >
        w
      </button>
      <button
        disabled=""
        id="x"
        value="x"
      >
        x
      </button>
      <button
        disabled=""
        id="y"
        value="y"
      >
        y
      </button>
      <button
        disabled=""
        id="z"
        value="z"
      >
        z
      </button>
    </p>
    <p
      class="lose-msg"
      style="visibility: visible;"
    >
      You Lose! Correct Word: 
      apple
    </p>
  </div>
</div>
`;

exports[`Game lost: matches snapshot 1`] = `
<div>
  <div
    class="Snowman"
  >
    <img
      alt="6"
    />
    <p>
      Number wrong: 
      6
    </p>
    <p
      class="Snowman-word"
    >
      _
      _
      _
      _
      _
    </p>
    <p
      class="letter"
      style="visibility: hidden;"
    >
      <button
        id="a"
        value="a"
      >
        a
      </button>
      <button
        disabled=""
        id="b"
        value="b"
      >
        b
      </button>
      <button
        id="c"
        value="c"
      >
        c
      </button>
      <button
        id="d"
        value="d"
      >
        d
      </button>
      <button
        id="e"
        value="e"
      >
        e
      </button>
      <button
        id="f"
        value="f"
      >
        f
      </button>
      <button
        id="g"
        value="g"
      >
        g
      </button>
      <button
        id="h"
        value="h"
      >
        h
      </button>
      <button
        id="i"
        value="i"
      >
        i
      </button>
      <button
        id="j"
        value="j"
      >
        j
      </button>
      <button
        id="k"
        value="k"
      >
        k
      </button>
      <button
        id="l"
        value="l"
      >
        l
      </button>
      <button
        id="m"
        value="m"
      >
        m
      </button>
      <button
        id="n"
        value="n"
      >
        n
      </button>
      <button
        id="o"
        value="o"
      >
        o
      </button>
      <button
        id="p"
        value="p"
      >
        p
      </button>
      <button
        disabled=""
        id="q"
        value="q"
      >
        q
      </button>
      <button
        disabled=""
        id="r"
        value="r"
      >
        r
      </button>
      <button
        id="s"
        value="s"
      >
        s
      </button>
      <button
        id="t"
        value="t"
      >
        t
      </button>
      <button
        id="u"
        value="u"
      >
        u
      </button>
      <button
        id="v"
        value="v"
      >
        v
      </button>
      <button
        id="w"
        value="w"
      >
        w
      </button>
      <button
        disabled=""
        id="x"
        value="x"
      >
        x
      </button>
      <button
        disabled=""
        id="y"
        value="y"
      >
        y
      </button>
      <button
        disabled=""
        id="z"
        value="z"
      >
        z
      </button>
    </p>
    <p
      class="lose-msg"
      style="visibility: visible;"
    >
      You Lose! Correct Word: 
      apple
    </p>
  </div>
</div>
`;

exports[`last image stays on page once game is lost 1`] = `
<div>
  <div
    class="Snowman"
  >
    <img
      alt="6"
    />
    <p>
      Number wrong: 
      6
    </p>
    <p
      class="Snowman-word"
    >
      _
      _
      _
      _
      _
    </p>
    <p
      class="letter"
      style="visibility: hidden;"
    >
      <button
        id="a"
        value="a"
      >
        a
      </button>
      <button
        disabled=""
        id="b"
        value="b"
      >
        b
      </button>
      <button
        id="c"
        value="c"
      >
        c
      </button>
      <button
        id="d"
        value="d"
      >
        d
      </button>
      <button
        id="e"
        value="e"
      >
        e
      </button>
      <button
        id="f"
        value="f"
      >
        f
      </button>
      <button
        id="g"
        value="g"
      >
        g
      </button>
      <button
        id="h"
        value="h"
      >
        h
      </button>
      <button
        id="i"
        value="i"
      >
        i
      </button>
      <button
        id="j"
        value="j"
      >
        j
      </button>
      <button
        id="k"
        value="k"
      >
        k
      </button>
      <button
        id="l"
        value="l"
      >
        l
      </button>
      <button
        id="m"
        value="m"
      >
        m
      </button>
      <button
        id="n"
        value="n"
      >
        n
      </button>
      <button
        id="o"
        value="o"
      >
        o
      </button>
      <button
        id="p"
        value="p"
      >
        p
      </button>
      <button
        disabled=""
        id="q"
        value="q"
      >
        q
      </button>
      <button
        disabled=""
        id="r"
        value="r"
      >
        r
      </button>
      <button
        id="s"
        value="s"
      >
        s
      </button>
      <button
        id="t"
        value="t"
      >
        t
      </button>
      <button
        id="u"
        value="u"
      >
        u
      </button>
      <button
        id="v"
        value="v"
      >
        v
      </button>
      <button
        id="w"
        value="w"
      >
        w
      </button>
      <button
        disabled=""
        id="x"
        value="x"
      >
        x
      </button>
      <button
        disabled=""
        id="y"
        value="y"
      >
        y
      </button>
      <button
        disabled=""
        id="z"
        value="z"
      >
        z
      </button>
    </p>
    <p
      class="lose-msg"
      style="visibility: visible;"
    >
      You Lose! Correct Word: 
      apple
    </p>
  </div>
</div>
`;

exports[`matches snapshot 1`] = `
<div>
  <div
    class="Snowman"
  >
    <img
      alt="0"
      src="[object Object]"
    />
    <p>
      Number wrong: 
      0
    </p>
    <p
      class="Snowman-word"
    >
      _
      _
      _
      _
      _
    </p>
    <p
      class="letter"
      style="visibility: visible;"
    >
      <button
        id="a"
        value="a"
      >
        a
      </button>
      <button
        id="b"
        value="b"
      >
        b
      </button>
      <button
        id="c"
        value="c"
      >
        c
      </button>
      <button
        id="d"
        value="d"
      >
        d
      </button>
      <button
        id="e"
        value="e"
      >
        e
      </button>
      <button
        id="f"
        value="f"
      >
        f
      </button>
      <button
        id="g"
        value="g"
      >
        g
      </button>
      <button
        id="h"
        value="h"
      >
        h
      </button>
      <button
        id="i"
        value="i"
      >
        i
      </button>
      <button
        id="j"
        value="j"
      >
        j
      </button>
      <button
        id="k"
        value="k"
      >
        k
      </button>
      <button
        id="l"
        value="l"
      >
        l
      </button>
      <button
        id="m"
        value="m"
      >
        m
      </button>
      <button
        id="n"
        value="n"
      >
        n
      </button>
      <button
        id="o"
        value="o"
      >
        o
      </button>
      <button
        id="p"
        value="p"
      >
        p
      </button>
      <button
        id="q"
        value="q"
      >
        q
      </button>
      <button
        id="r"
        value="r"
      >
        r
      </button>
      <button
        id="s"
        value="s"
      >
        s
      </button>
      <button
        id="t"
        value="t"
      >
        t
      </button>
      <button
        id="u"
        value="u"
      >
        u
      </button>
      <button
        id="v"
        value="v"
      >
        v
      </button>
      <button
        id="w"
        value="w"
      >
        w
      </button>
      <button
        id="x"
        value="x"
      >
        x
      </button>
      <button
        id="y"
        value="y"
      >
        y
      </button>
      <button
        id="z"
        value="z"
      >
        z
      </button>
    </p>
    <p
      class="lose-msg"
      style="visibility: hidden;"
    >
      You Lose! Correct Word: 
      apple
    </p>
  </div>
</div>
`;

exports[`matches snapshot at initial render 1`] = `
<div>
  <div
    class="Snowman"
  >
    <img
      alt="0"
      src="[object Object]"
    />
    <p>
      Number wrong: 
      0
    </p>
    <p
      class="Snowman-word"
    >
      _
      _
      _
      _
      _
    </p>
    <p
      class="letter"
      style="visibility: visible;"
    >
      <button
        id="a"
        value="a"
      >
        a
      </button>
      <button
        id="b"
        value="b"
      >
        b
      </button>
      <button
        id="c"
        value="c"
      >
        c
      </button>
      <button
        id="d"
        value="d"
      >
        d
      </button>
      <button
        id="e"
        value="e"
      >
        e
      </button>
      <button
        id="f"
        value="f"
      >
        f
      </button>
      <button
        id="g"
        value="g"
      >
        g
      </button>
      <button
        id="h"
        value="h"
      >
        h
      </button>
      <button
        id="i"
        value="i"
      >
        i
      </button>
      <button
        id="j"
        value="j"
      >
        j
      </button>
      <button
        id="k"
        value="k"
      >
        k
      </button>
      <button
        id="l"
        value="l"
      >
        l
      </button>
      <button
        id="m"
        value="m"
      >
        m
      </button>
      <button
        id="n"
        value="n"
      >
        n
      </button>
      <button
        id="o"
        value="o"
      >
        o
      </button>
      <button
        id="p"
        value="p"
      >
        p
      </button>
      <button
        id="q"
        value="q"
      >
        q
      </button>
      <button
        id="r"
        value="r"
      >
        r
      </button>
      <button
        id="s"
        value="s"
      >
        s
      </button>
      <button
        id="t"
        value="t"
      >
        t
      </button>
      <button
        id="u"
        value="u"
      >
        u
      </button>
      <button
        id="v"
        value="v"
      >
        v
      </button>
      <button
        id="w"
        value="w"
      >
        w
      </button>
      <button
        id="x"
        value="x"
      >
        x
      </button>
      <button
        id="y"
        value="y"
      >
        y
      </button>
      <button
        id="z"
        value="z"
      >
        z
      </button>
    </p>
    <p
      class="lose-msg"
      style="visibility: hidden;"
    >
      You Lose! Correct Word: 
      apple
    </p>
  </div>
</div>
`;
